<?xml version="1.0"?>
<package format="2">
  <name>gtsam_catkin</name>
  <version>0.0.0</version>
  <description>Open3D catkin</description>

  <maintainer email="nubertj@ethz.ch">Edo Jelavic</maintainer>
  <license>BSD-3_Clause</license>
  <author email="nubertj@ethz.ch">Julian Nubert</author>

  <buildtool_depend>catkin</buildtool_depend>
 
</package>